🌱 Changelog: - Added new module for the Arkanoid game
🐞 Known Bugs:
-

📋 Backlog:
-

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@ build
 /ModTetris/.idea
 /ModTetris/build
 /ModTetris/run
+
+/ModArkanoid/build
+/ModArkanoid/.gradle
+/ModArkanoid/.idea
+/ModArkanoid/build
+/ModArkanoid/run
