--- a/GeoWarePlugin/build.gradle
+++ b/GeoWarePlugin/build.gradle
@@ -21,6 +21,7 @@ repositories {
     maven { url "https://repo.dmulloy2.net/repository/public/" }
     maven { url 'https://jitpack.io' }
     maven { url = "https://repo.aikar.co/content/groups/aikar/" }
+    maven { url = 'https://repo.extendedclip.com/releases/' }
 }
 
 dependencies {
@@ -28,6 +29,7 @@ dependencies {
     paperweight.paperDevBundle("1.21.1-R0.1-SNAPSHOT")
     implementation('com.google.code.findbugs:jsr305:3.0.2')
     implementation 'org.xerial:sqlite-jdbc:3.7.2'
+    compileOnly 'me.clip:placeholderapi:2.11.6'
 
     implementation project(':GeoWareCommon')
 }
