🌱 Changelog: - The packet system code has been removed as it has been replaced by a dedicated api.
🐞 Known Bugs:
-

📋 Backlog:
-

--- a/GeoWareMod/build.gradle
+++ b/GeoWareMod/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     implementation project(':GeoWareCommon')
+    include 'com.github.RazorPlay01:PacketHandler:1.0.0'
 }
 
 processResources {
