🌱 Changelog: - Refactor. - Added new textures to GalagaGame. - Fixed some bugs in DonkeyKongGame.
🐞 Known Bugs:
-

📋 Backlog:
-

--- a/GeoWareMod/build.gradle
+++ b/GeoWareMod/build.gradle
@@ -12,11 +12,21 @@ base {
 
 
 repositories {
-    // Add repositories to retrieve artifacts from in here.
-    // You should only use this when depending on other mods because
-    // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-    // See https://docs.gradle.org/current/userguide/declaring_repositories.html
-    // for more information about repositories.
+    exclusiveContent {
+        forRepository {
+            maven {
+                name = "Modrinth"
+                url = "https://api.modrinth.com/maven"
+            }
+        }
+        filter {
+            includeGroup "maven.modrinth"
+        }
+    }
+    maven {
+        name "KosmX's maven"
+        url 'https://maven.kosmx.dev/'
+    }
 }
 
 dependencies {
@@ -26,6 +36,9 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+    modImplementation "maven.modrinth:emotecraft:2.4.9+1.21.1-fabric"
+    include modImplementation("dev.kosmx.player-anim:player-animation-lib-fabric:2.0.1+1.21.1")
 
     implementation project(':GeoWareCommon')
     include 'com.github.RazorPlay01:PacketHandler:1.0.0'
@@ -69,7 +82,7 @@ java {
 
 jar {
     from("LICENSE") {
-        rename { "${it}_${project.archivesBaseName}"}
+        rename { "${it}_${project.archivesBaseName}" }
     }
     from project(':GeoWareCommon').sourceSets.main.output
 }
