--- a/GeoWarePlugin/build.gradle
+++ b/GeoWarePlugin/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'com.github.johnrengelman.shadow' version '7.1.2'
+    id 'com.gradleup.shadow' version '8.3.0'
     id("io.papermc.paperweight.userdev") version "1.7.1"
     id("xyz.jpenilla.run-paper") version "2.3.0"
 }
@@ -28,8 +28,8 @@ dependencies {
     compileOnly("io.papermc.paper:paper-api:1.21-R0.1-SNAPSHOT")
     paperweight.paperDevBundle("1.21.1-R0.1-SNAPSHOT")
     implementation('com.google.code.findbugs:jsr305:3.0.2')
-    implementation 'org.xerial:sqlite-jdbc:3.7.2'
-    compileOnly 'me.clip:placeholderapi:2.11.6'
+    implementation('org.xerial:sqlite-jdbc:3.7.2')
+    compileOnly('me.clip:placeholderapi:2.11.6')
 
     implementation project(':GeoWareCommon')
 }
@@ -44,9 +44,7 @@ tasks {
 }
 
 shadowJar {
-    archiveClassifier.set('')
-    mergeServiceFiles()
-    configurations = [project.configurations.runtimeClasspath]
+    relocate "com.github.razorplay.packet_handler", "com.github.razorplay01.minecraft_events_utiles.packet_handler"
 }
 
 tasks.build {
