🌱 Changelog: - Refactor. - Added guitarhero textures. - Added sheet music system to guitarhero. - Added system of recordable events to the guitarhero.
🐞 Known Bugs:
-

📋 Backlog:
-

--- a/GeoWareMod/build.gradle
+++ b/GeoWareMod/build.gradle
@@ -27,6 +27,10 @@ repositories {
         name "KosmX's maven"
         url 'https://maven.kosmx.dev/'
     }
+    maven {
+        url "https://www.cursemaven.com"
+        content { includeGroup "curse.maven" }
+    }
 }
 
 dependencies {
@@ -42,6 +46,8 @@ dependencies {
 
     implementation project(':GeoWareCommon')
     include 'com.github.RazorPlay01:PacketHandler:1.0.0'
+
+    modImplementation "curse.maven:watermedia-869524:6457358"
 }
 
 processResources {
